--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <form id="postForm">
             <h2>POST Request</h2>
             <label for="dataInput">Data (comma-separated):</label>
-            <input type="text" id="dataInput" required>
+            <input type="text" id="dataInput" placeholder="Enter data here..." required>
             <button type="submit">Send POST Request</button>
         </form>
-        <div id="postResponse"></div>
-        <button id="getRequestButton">Send GET Request</button>
-        <div id="getResponse"></div>
+        <div id="postResponse" class="response-box"></div>
+        <button id="getRequestButton" class="action-button">Send GET Request</button>
+        <div id="getResponse" class="response-box"></div>
     </div>
     <script src="script.js"></script>
 </body>
